samples/_failures_safe/1761169889_929b68_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f1dc8ed.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_6f1dc8ed.c:165:9: error: expected expression at end of input
  165 |         const Token* token =
      |         ^~~~~
./samples/SAFE/__tmp_6f1dc8ed.c:165:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6f1dc8ed.c:165:9: error: expected declaration or statement at end of input
